k8s-resources/authsvc-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: authsvc
  name: authsvc
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: authsvc
    spec:
      containers:
        - image: arrrspace-authsvc:v1
          name: authsvc
          resources: {}
      restartPolicy: Always
status: {}
