k8s-resources/dbasesvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbase
  labels:
    app: dbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbase
  template:
    metadata:
      labels:
        app: dbase
    spec:
      containers:
        - name: dbase
          image: arrrspace-dbasesvc:v1
          ports:
            - name: 'http'
              containerPort: 27017
