k8s-resources/gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: GATEWAY_HOSTNAME
            - name: STATIC_SITE_HOSTNAME
          image: arrrspace-gateway:v1
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
