k8s-resources/jankinssvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jankinssvc
  labels:
    app: jankinssvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jankinssvc
  template:
    metadata:
      labels:
        app: jankinssvc
    spec:
      serviceAccountName: deploy-manager-sa
      containers:
        - name: jankinssvc
          image: arrrspace-jankinssvc:v1
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
