k8s-resources/jenkinssvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkinssvc
  labels:
    app: jenkinssvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkinssvc
  template:
    metadata:
      labels:
        app: jenkinssvc
    spec:
      serviceAccountName: deploy-manager-sa
      containers:
        - name: jenkinssvc
          image: k8s-labs-jenkinssvc:v1
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
