k8s-resources/profilesvc-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: profilesvc
  name: profilesvc
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: profilesvc
    spec:
      containers:
        - env:
            - name: MINIO_ACCESS_KEY
            - name: MINIO_SECRET_KEY
          image: arrrspace-profilesvc:v1
          name: profilesvc
          resources: {}
      restartPolicy: Always
status: {}
