k8s-resources/simplestoragesvc-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: simplestoragesvc
  name: simplestoragesvc
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: simplestoragesvc
    spec:
      containers:
        - env:
            - name: MINIO_ACCESS_KEY
            - name: MINIO_SECRET_KEY
          image: arrrspace-simplestorage:v1
          name: simplestoragesvc
          resources: {}
      restartPolicy: Always
status: {}
