k8s-resources/authsvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: authsvc
  name: authsvc
spec:
  ports:
    - name: '3000'
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: authsvc
status:
  loadBalancer: {}
