k8s-resources/dbasesvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbase
spec:
  ports:
    - protocol: TCP
      port: 27017
  selector:
    app: dbase
status:
  loadBalancer: {}
