k8s-resources/jankinssvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jankinssvc
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: jankinssvc
status:
  loadBalancer: {}
