k8s-resources/jenkinssvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkinssvc
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: jenkinssvc
status:
  loadBalancer: {}
