k8s-resources/profilesvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilesvc
spec:
  ports:
    - protocol: TCP
      port: 3000
  selector:
    app: profilesvc
status:
  loadBalancer: {}
