k8s-resources/simplestoragesvc-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: simplestoragesvc
spec:
  ports:
    - protocol: TCP
      port: 9000
  selector:
    app: simplestoragesvc
status:
  loadBalancer: {}
